--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "cookie": "^0.6.0",
     "dotenv": "^16.3.1",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
